--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>zShop</title>
+	<title>zShop2</title>
 	<meta name="description" content="Free Responsive Html5 Css3 Templates | Zerotheme.com">
 	<meta name="author" content="http://www.Zerotheme.com">
 
@@ -20,7 +20,7 @@
 	
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/menu.css">
-
+	<link rel="stylesheet" href="css/practice.css">
 	<!-- Custom Fonts -->
 	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
