--- a/archive.html
+++ b/archive.html
@@ -19,6 +19,7 @@
 	
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/menu.css">
+	<link rel="stylesheet" href="/zShop/css/practice.css">
 
 	<!-- Custom Fonts -->
 	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -62,7 +63,8 @@
 						<!--Start Post-->
 						<div class="flex-box">
 							<div class="col-1-2">
-								<div class="box-image" style="background-image: url('images/15.jpg')"></div>
+								<div class="box-image" style="background-image: url('images/15.jpg')">
+								</div>
 							</div>
 							<div class="col-1-2">
 								<div class="box-text">
@@ -85,7 +87,8 @@
 						<!--Start Post-->
 						<div class="flex-box">
 							<div class="col-1-2 f-right">
-								<div class="box-image" style="background-image: url('images/16.jpg')"></div>
+								<div class="box-image" style="background-image: url('images/16.jpg')">
+								</div>
 							</div>
 							<div class="col-1-2">
 								<div class="box-text text-right">
@@ -108,7 +111,8 @@
 						<!--Start Post-->
 						<div class="flex-box">
 							<div class="col-1-2">
-								<div class="box-image" style="background-image: url('images/14.jpg')"></div>
+								<div class="box-image" style="background-image: url('images/14.jpg')">
+								</div>
 							</div>
 							<div class="col-1-2">
 								<div class="box-text">
