--- a/archive.html
+++ b/archive.html
@@ -6,7 +6,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>zShop1</title>
+	<title>zShop</title>
 	<meta name="description" content="Free Responsive Html5 Css3 Templates | Zerotheme.com">
 	<meta name="author" content="http://www.Zerotheme.com">
 
