--- a/single.html
+++ b/single.html
@@ -5,7 +5,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>zShop3</title>
+	<title>zShop</title>
 	<meta name="description" content="Free Responsive Html5 Css3 Templates | Zerotheme.com">
 	<meta name="author" content="http://www.Zerotheme.com">
 
